[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inoue-ai-saas-sdk"
version = "0.2.0"
description = "Async Python SDK and shared contracts for the Inoue AI SaaS API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic[email]>=2.6",
]

[tool.setuptools.packages.find]
where = ["src"]
